@@ -1,5 +1,15 @@
 2004-10-22  Benoît Dejean  <tazforever@dlfp.org>
 
+	* src/callbacks.c: (cb_about_activate): New description. Closes #131801.
+	
+	* src/procman.h:
+	* src/interface.c: (create_sys_view):
+	* src/load-graph.c: (get_memory): Added memory and swap % in load-graph.
+	Original patch from Dennis Cranston <dennis_cranston at yahoo com>.
+	Closes #63523.
+	
+2004-10-22  Benoît Dejean  <tazforever@dlfp.org>
+
 	* src/procman.png: New icon. Closes #117790.
 
 2004-10-22  Benoît Dejean  <tazforever@dlfp.org>
